# py4vasp

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  TODO.md  TODOs.txt  makefile  plan.md  pyproject.toml  pytest_output.txt
.agents/skills/develop-test-driven/: SKILL.md
.claude/skills/push-py4vasp/: SKILL.md  push_prep.py
.claude/skills/review-py4vasp/: SKILL.md  review.py
.claude/skills/tdd-py4vasp/: SKILL.md  run_tests.py
.github/skills/port-quantity/: SKILL.md
.github/workflows/: codeql-analysis.yml  install.yml  publish_core.yml  publish_full.yml  pythonapp.yml  stale_issues.yml  test.yml  test_core.yml  test_full.yml  test_minimal.yml  test_python.yml
core/: pyproject.toml
docs/: .gitignore  Makefile  _index.rst  calculation.rst  calculation_class.rst  calculation_package.rst  conf.py  control.rst  control_api.rst  convert.yaml  data.rst  data_api.rst  exception.rst  exceptions.rst  exceptions_api.rst  generate.rst  index.rst  make.bat  modules.rst  raw.rst  raw_api.rst
docs/_templates/: class.rst  member.rst  module.rst  package.rst
docs/architecture/: calculation.rst
docs/calculation/: Calculation.rst  _index.rst  electron_phonon_bandgap.rst
docs/exception/: _index.rst
docs/modules/: calculation.rst  exceptions.rst  index.rst  raw.rst
docs/plot/: _index.rst  graph.rst  view.rst
full/: pyproject.toml
src/py4vasp/: __init__.py  _batch.py  _calculation.py  _calculations.py  _compare_calculations.py  _config.py  calculation.py  cli.py  combine.py  config.py  control.py  data.py  demo.py  exception.py  graph.py  index.rst  interpolate.py  raw.py  view.py
src/py4vasp/_analysis/: mlff.py
src/py4vasp/_calculation/: _CONTCAR.py  _OSZICAR.py  __init__.py  _density.py  _dispersion.py  _dos.py  _fatband.py  _magnetism.py  _optics_color.py  _polarization.py  _stoichiometry.py  _topology.py  band.py  bandgap.py  base.py  born_effective_charge.py  cell.py  current_density.py  data_access.py  density.py  dielectric_function.py  dielectric_tensor.py  dispatch.py  dos.py  effective_coulomb.py  elastic_modulus.py  electron_phonon_accumulator.py  electron_phonon_bandgap.py  electron_phonon_chemical_potential.py  electron_phonon_instance.py  electron_phonon_self_energy.py  electron_phonon_transport.py  electronic_minimization.py  energy.py  exciton_density.py  exciton_eigenvector.py  fatband.py  force.py  force_constant.py  internal_strain.py  (+26 more)
src/py4vasp/_combine/: base.py  energies.py  forces.py  stresses.py
src/py4vasp/_control/: base.py  incar.py  kpoints.py  poscar.py
src/py4vasp/_data/: band.py  bandgap.py  base.py  born_effective_charge.py  contcar.py  density.py  dielectric_function.py  dielectric_tensor.py  dispersion.py  dos.py  energy.py  export.py  force.py  graph.py  internal_strain.py  kpoint.py  magnetism.py  oszicar.py  pair_correlation.py  phonon.py  phonon_band.py  phonon_dos.py  phonon_projector.py  potential.py  projector.py  selection.py  slice_.py  stress.py  structure.py  topology.py  velocity.py  (+2 more)
tests/: conftest.py  test_calculation.py  test_calculations.py  test_compare.py  test_doctest.py  test_py4vasp.py  test_version.py
tests/_third_party/: test_graph.py  test_interactive.py
tests/_util/: test_convert.py  test_documentation.py  test_reader.py  test_sanity_check.py  test_selection.py  test_version.py
tests/analysis/: test_mlff.py
tests/batch/: test_batch.py
tests/calculation/: conftest.py  test_band.py  test_bandgap.py  test_base.py  test_born_effective_charge.py  test_calculation_registry.py  test_class.py  test_contcar.py  test_current_density.py  test_data_access.py  test_default_calculation.py  test_density.py  test_dielectric_function.py  test_dielectric_tensor.py  test_dispatch.py  test_dispersion.py  test_dos.py  test_effective_coulomb.py  test_elastic_modulus.py  test_electron_phonon_bandgap.py  test_electron_phonon_chemical_potential.py  test_electron_phonon_self_energy.py  test_electron_phonon_transport.py  test_electronic_minimization.py  test_energy.py  test_exciton_density.py  test_exciton_eigenvector.py  test_fatband.py  test_force.py  test_force_constant.py  test_internal_strain.py  test_kpoint.py  test_local_moment.py  test_magnetism.py  test_module.py  test_neighbor_list.py  test_nics.py  test_nmr_current.py  test_optics.py  test_optics_color.py  (+24 more)
tests/cli/: test_cli.py  test_convert.py
tests/control/: test_base.py  test_incar.py  test_kpoints.py  test_poscar.py
tests/data/: __init__.py  conftest.py  test_band.py  test_bandgap.py  test_base.py  test_born_effective_charge.py  test_born_effective_charges.py  test_contcar.py  test_convergence.py  test_density.py  test_dielectric.py  test_dielectric_function.py  test_dielectric_tensor.py  test_dispersion.py  test_dos.py  test_elastic_modulus.py  test_energy.py  test_fatband.py  test_force.py  test_force_constant.py  test_force_constants.py  test_forces.py  test_graph_mixin.py  test_internal_strain.py  test_kpoint.py  test_kpoints.py  test_magnetism.py  test_oszicar.py  test_pair_correlation.py  test_phonon_band.py  test_phonon_dos.py  test_piezoelectric_tensor.py  test_polarization.py  test_potential.py  test_projector.py  test_projectors.py  test_repr.py  test_slice_mixin.py  test_stress.py  test_structure.py  (+8 more)
tests/doctest/: test_calculation.py
tests/raw/: conftest.py  schema_snapshot.json  test_access.py  test_compatibility.py  test_data.py  test_definition.py  test_file.py  test_mapping.py  test_model_validation.py  test_raw.py  test_read.py  test_schema.py  test_schema_version.py  test_write.py  util.py
tests/regression/: test_manual.py
tests/scripts/: test_error_analysis.py
tests/sphinx/: test_autodoc.py  test_core.py  test_examples.py  test_full_documentation.py
tests/util/: test_check.py  test_color.py  test_convert.py  test_database.py  test_density.py  test_densityvisualizer.py  test_documentation.py  test_import.py  test_index.py  test_parse.py  test_parser.py  test_reader.py  test_sanity_check.py  test_select.py  test_slicing.py  test_suggest.py  test_to_database_new.py  test_version.py
(+260 files in other folders)
