[tool.poetry]
name = "py4vasp-core"
version = "0.9.0"
description = "Tool for assisting with the analysis and setup of VASP calculations."
authors = [
    "VASP Software GmbH <py4vasp@vasp.at>",
    "Martin Schlipf <martin.schlipf@gmail.com>",
    "Henrique Miranda <miranda.henrique@gmail.com>",
    "Orest Dubay <orest-d@users.noreply.github.com>",
    "Jonathan Lahnsteiner <jonathan.lahnsteiner@gmx.at>",
    "Eisuke Kawashima <e-kwsm@users.noreply.github.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "py4vasp", from = "src"}]
homepage = "https://vasp.at/py4vasp/latest"
repository = "https://github.com/vasp-dev/py4vasp"

[tool.poetry.urls]
"Support Forum" = "https://vasp.at/forum/"


[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.23"
h5py = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
pylint = ">=2.15"
hypothesis = ">=6.48.1"
black = ">=22.6.0"
isort = ">=5.10.1"

[tool.poetry.scripts]
error-analysis = "py4vasp.scripts.error_analysis:main"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
